<resources>
    <string name="app_name">Hello SharedPreference</string>

    <!-- Button label for blue button -->
    <string name="blue_button">Blue</string>

    <!-- Button label for green button -->
    <string name="green_button">Green</string>

    <!-- Button label for red button -->
    <string name="red_button">Red</string>

    <!-- Button label for black button -->
    <string name="black_button">Black</string>

    <!-- Default string for count textview -->
    <string name="default_count">0</string>

    <!-- Button label for Count button -->
    <string name="count_button">Count Up</string>

    <!-- Button label for Reset button -->
    <string name="reset_button">Count Down</string>

    <string-array name="color_list">
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>Black</item>
    </string-array>



</resources>
